<resources>
    <string name="app_name">cryptoWallet</string>
    <string name="wallet_menu_title">Wallet</string>
    <string name="request_menu_title">Request</string>
    <string name="send_menu_title">Send</string>
    <string name="bottom_sheet_barcode_this_is_the_address">This is the Address</string>
    <string name="bottom_sheet_barcode_copy_to_clipboard">Copy To Clipboard</string>
    <string name="bottom_sheet_menu_are_you_sure_you_want_to_logout">Are you sure you want to Logout?</string>
    <string name="bottom_sheet_menu_logout">Logout</string>
    <string name="bottom_sheet_menu_cancel">Cancel</string>
    <string name="fragment_request_content_description_media">content_description_media</string>
    <string name="fragment_request_request_money_share_addrress_qr">Request Money (Share Addrress/Qr)</string>
    <string name="fragment_request_money_dialog_content_description_mediax">content_description_media</string>
    <string name="fragment_request_money_dialog_content_description_media">content_description_media</string>
    <string name="fragment_request_money_dialog_address">Address:</string>
    <string name="fragment_send_content_description_media">content_description_media</string>
    <string name="fragment_send_send_money">Send Money</string>
    <string name="fragment_send_amount">Amount</string>
    <string name="fragment_send_currency_search_or_select">Currency (Search/Select from wallets)</string>
    <string name="fragment_send_to_email_or_address">To (Email or Address)</string>
    <string name="fragment_send_send">Send</string>
    <string name="fragment_send_scan">Scan</string>
    <string name="fragment_send_money2fa_dialog_content_description_media">content_description_media</string>
    <string name="fragment_send_money2fa_dialog_two_factor_authentication_token">Two Factor Authentication Token:</string>
    <string name="fragment_send_money2fa_dialog_two_factor_authentication_token_recieved_from_sms">Please wait for SMS</string>
    <string name="fragment_send_money_confirm_dialog_content_description_media">content_description_media</string>
    <string name="fragment_send_money_confirm_dialog_confirmation">Confirmation:</string>
    <string name="fragment_transaction_details_content_description_media">content_description_media</string>
    <string name="fragment_transaction_details_transactions">Transactions:</string>
    <string name="fragment_wallet_content_description_media">content_description_media</string>
    <string name="fragment_wallet_your_wallets_click_for_details">Your Wallets (Click for details)</string>
    <string name="fragment_wallet_details_logo">logo</string>
    <string name="fragment_wallet_details_name">Name:</string>
    <string name="fragment_wallet_details_currency">Currency:</string>
    <string name="fragment_wallet_details_amount">Amount:</string>
    <string name="send_confirm_dialog_transaction_not_completed">Transaction could not be completed</string>
    <string name ="send_confirm_dialog_transaction_successful">"Transation Successful, you will receive an email with confirmation. \n Keep in mind, transactions may take between 30 minutes and one hour to complete."</string>
    <string name="accept_button">Accept</string>
    <string name="dialog_send">Send</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_request">Request</string>
    <string name="dialog_close">Close</string>
    <string name="fragment_show_transactions_select_for_details">Transactions(Select for Details)</string>
    <string name="bottom_nav_menu_transactions">Transactions</string>
    <string name="bottom_nav_menu_logout">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>