<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_2dp">

        <TextView
            android:id="@+id/idTVCourseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_10dp"
            android:gravity="center"
            android:text="@string/bottom_sheet_menu_are_you_sure_you_want_to_logout"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/idBtnDismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_100dp"
            android:layout_below="@id/idTVCourseName"
            android:gravity="center"
            android:text="@string/bottom_sheet_menu_cancel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_10dp"
            android:layout_below="@id/idTVCourseName"
            android:layout_toEndOf="@id/idBtnDismiss"
            android:text="@string/bottom_sheet_menu_logout"
            android:textAllCaps="false" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>