<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardElevation="30dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@string/fragment_wallet_details_logo"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/walletDetailsNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_4dp"
                    android:text="@string/fragment_wallet_details_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:textAlignment="center"
                    android:paddingStart="@dimen/standard_8dp"
                    android:paddingEnd="@dimen/standard_8dp"
                    android:paddingBottom="@dimen/standard_8dp"
                    android:background="@android:drawable/editbox_background" />

                <TextView
                    android:id="@+id/walletDetailsCurrency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_4dp"
                    android:text="@string/fragment_wallet_details_currency"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:textAlignment="center"
                    android:paddingStart="@dimen/standard_8dp"
                    android:paddingEnd="@dimen/standard_8dp"
                    android:paddingBottom="@dimen/standard_8dp"
                    android:background="@android:drawable/editbox_background"/>

                <TextView
                    android:id="@+id/walletDetailsBalanceAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_4dp"
                    android:text="@string/fragment_wallet_details_amount"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:textAlignment="center"
                    android:paddingStart="8dp"
                    android:paddingEnd="@dimen/standard_8dp"
                    android:paddingBottom="@dimen/standard_8dp"
                    android:background="@android:drawable/editbox_background"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>