<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:background="@color/purple_custom"
android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLogo_send"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/standard_16dp"
        android:layout_marginTop="@dimen/standard_16dp"
        android:layout_marginEnd="@dimen/standard_16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_image_send"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:contentDescription="@string/fragment_send_content_description_media"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/fragment_send_send_money"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardSearch_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_16dp"
        android:layout_marginTop="@dimen/standard_16dp"
        android:layout_marginEnd="@dimen/standard_16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardLogo_send">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#55F5F5F5"
                android:elevation="1dp"
                android:queryHint="Search"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:iconifiedByDefault="false"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_send"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="@dimen/standard_16dp"
        android:layout_marginTop="@dimen/standard_16dp"
        android:layout_marginEnd="@dimen/standard_16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="30dp"
        app:layout_constraintBottom_toTopOf="@+id/card_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardSearch_send">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wallets_send_recycler_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_16dp"
        android:layout_marginTop="@dimen/standard_16dp"
        android:layout_marginEnd="@dimen/standard_16dp"
        android:layout_marginBottom="@dimen/standard_16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_send">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldAmount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_send_amount"
                android:paddingStart="@dimen/standard_8dp"
                android:paddingEnd="@dimen/standard_8dp"
                android:paddingBottom="@dimen/standard_8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldCurrency"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_send_currency_search_or_select"
                android:paddingStart="@dimen/standard_8dp"
                android:paddingEnd="@dimen/standard_8dp"
                android:paddingBottom="@dimen/standard_8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldTo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_send_to_email_or_address"
                android:paddingStart="@dimen/standard_8dp"
                android:paddingEnd="@dimen/standard_8dp"
                android:paddingBottom="@dimen/standard_8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/send_money_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard_8dp"
                    android:layout_marginEnd="@dimen/standard_8dp"
                    android:text="@string/fragment_send_send"
                    app:icon="@drawable/ic_wallet"
                    app:strokeColor="@color/purple_custom"
                    app:strokeWidth="@dimen/standard_2dp" />

                <Button
                    android:id="@+id/scan_qr_code_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard_8dp"
                    android:layout_marginEnd="@dimen/standard_8dp"
                    android:text="@string/fragment_send_scan"
                    app:icon="@drawable/ic_scan_qr_code"
                    app:strokeColor="@color/purple_custom"
                    app:strokeWidth="@dimen/standard_2dp" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
